<resources>
    <string name="app_name">Hungry Bird</string>
    <string name="login_label_chef"><u>Sign in as Chef</u></string>
    <string name="login_label_consumer">Sign in as Consumer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">141479469724025</string>
    <string name="gcm_sender_id">id:106569523238</string>

    <!-- Nav Drawer Menu Items -->
    <string name="consumer_drawer_title_gallery_view">Hungry\'s Nest</string>
    <string name="consumer_drawer_title_order_history">Order History</string>
    <string name="consumer_drawer_title_contact_us">Contact Us</string>
    <string name="consumer_simpsons">The Simpsons</string>

    <string name="consumer_cartoon_wars">Cartoon Wars</string>
    <string name="consumer_simpsorama">Simpsorama</string>

    <!-- Nav Drawer Menu Items -->
    <string name="chef_drawer_title_orders_view">Orders</string>
    <string name="chef_drawer_title_my_offering">My Offerings</string>
    <string name="chef_drawer_title_my_register">My Register</string>
    <string name="chef_drawer_title_contact_details">Contact Details</string>
    <string name="chef_logout">Logout</string>
    <string name="chef_simpsons">The Simpsons</string>

    <string name="chef_cartoon_wars">Cartoon Wars</string>
    <string name="chef_simpsorama">Simpsorama</string>

    <string-array name="serving_sizes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="dish_types">
        <item>Vegetarian</item>
        <item>Non-vegetarian</item>
    </string-array>

    <string-array name="cuisine_types">
        <item>Indian</item>
        <item>Italian</item>
        <item>Thai</item>
        <item>Mexican</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Greek</item>
    </string-array>

    <string-array name="order_status_array">
        <item>@string/order_status_received</item>
        <item>@string/order_status_in_progress</item>
        <item>@string/order_status_ready_for_pickup</item>
        <item>@string/order_status_out_for_delivery</item>
        <item>@string/order_status_complete</item>
        <item>@string/order_status_cancel</item>
    </string-array>

    <string name="order_status_received">Received</string>
    <string name="order_status_in_progress">In Progress</string>
    <string name="order_status_ready_for_pickup">Ready For Pickup</string>
    <string name="order_status_out_for_delivery">Out For Delivery</string>
    <string name="order_status_complete">Complete</string>
    <string name="order_status_cancel">Cancel</string>

    <!-- Transition dynamic names -->
    <string name="activity_image_trans">activity_image_transition</string>
    <string name="activity_text_trans">activity_text_transition</string>
    <string name="activity_mixed_trans">activity_mixed_transition</string>
    <string name="fragment_image_trans">fragment_image_transition</string>

    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="order_new_title_text">No New Order Received</string>
    <string name="order_new_details_text">When you will get a new order, you\'ll see\nthem here</string>
    <string name="order_in_progress_title_text">Nothing In Progress</string>
    <string name="order_in_progress_details_text">Change status of the newly received order to\n\"In Progress\"\nto see them here</string>
    <string name="order_done_title_text">No Orders Completed Yet</string>
    <string name="order_done_details_text">Change status of the\n\"In Progress\" order to \"Completed\"\nto see them here</string>
    <string name="login_description_label">Is cooking your passion and want to turn it into a job? Does your friend cook some of the best cuisines that you want to buy?</string>


</resources>
